--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,17 @@
 *{
   box-sizing:border-box;
+  font-family: 'Montserrat', sans-serif;
 }
-
+/* my helpers */
+.alignmiddle {
+  margin:0 auto;
+}
+.text-center {
+  text-align: center;
+}
+.margin-l{
+  margin:80px 0;
+}
 .App {
   text-align: center;
 }
@@ -30,7 +40,7 @@ nav a:hover {
 }
 .content {
   width:100%;
-  height:600px;
+  min-height:600px;
  
   
 }
@@ -40,15 +50,44 @@ nav a:hover {
 }
 .home {
   
-  background: rgb(142, 159, 206);
+  
+}
+.product-form {
+  display: block;
+  padding:20px;
+}
+.product-form input {
+  color:gray;
+  font-size:2em;
+  width:600px;
+  padding:20px;
+  outline:none;
+  border:1px solid rgb(209, 207, 207);
+  border-radius:20px;
+}
+.product-form input::placeholder {
+  color:rgb(189, 189, 189);
 }
 /* product search */
 
 .search-product-wrap {
-  display: inline-block;
+  border:1px solid rgb(206, 206, 206);
 }
 .search-product-wrap img {
+  max-width:240px;
   padding:10px 10px 30px 10px;
+}
+.search-product-wrap h1 {
+  color:rgb(36, 86, 151);
+  font-size:1.5em;
+}
+.description {
+  max-width:contain;
+  height:80px;
+}
+.item-price {
+  font-size:2.5em;
+  color:rgb(6, 199, 183);
 }
 .admin {
   background: rgb(221, 192, 233);
@@ -59,10 +98,7 @@ nav a:hover {
 }
 
 /* order search */
-.search-order-wrap {
-  width:100%;
 
-}
 .search-order-item {
   width:100%;
   height:50px;
@@ -71,4 +107,35 @@ nav a:hover {
 .search-order-item p {
   display: inline-block;
   padding:10px;
+}
+
+
+.flex-grid {
+  display: flex;
+}
+.col {
+  flex: 1;
+}
+.coll {
+  width:25%;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 1500px;
+  min-width: 1200px;
+}
+.row-s { 
+  display:flex;
+  flex-wrap: wrap;
+}
+.col-s {
+  text-align: center;
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: 1;
+  margin: 10px;
+}
+.col-4-s {
+  max-width: calc(100% / 12 * 4);
 }
